💄fix spacing in women's page

--- a/css/men.css
+++ b/css/men.css
@@ -99,6 +99,10 @@ nav ul li a:hover{
     text-decoration: none;
 }
 
+.shadow {
+    box-shadow: 0 0 12px 0px #333333c7;
+}
+
 
 /* Mens Poster Section */
 
