--- a/css/women.css
+++ b/css/women.css
@@ -100,6 +100,12 @@ nav ul li a:hover:before {
     width: 100%;
     left: 0;
 }
+nav ul li a:hover{
+    text-decoration: none;
+}
+.shadow {
+    box-shadow: 0 0 12px 0px #333333c7;
+}
 
 /*------ Top ------*/
 h2 {
@@ -147,7 +153,20 @@ h3 {
     background-color: rgb(221, 84, 29);
 }
 
-/*---spacing*/
+
+.card {
+    margin: auto;
+    font-family: 'Inter', sans-serif;
+}
+
+.card-title {
+    font-weight: 600;
+}
+.card-title,
+.card-text {
+    color: black;
+}
+
 .col {
     margin: 20px auto;
 }
